--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@
 @import url(https://fonts.googleapis.com/css?family=Fredericka+the+Great|Lato);
 
 body {
-  background-color: #5f5345;
+  background-color: #a81a3e;
 }
  
 .pageContainer {
@@ -37,15 +37,15 @@ img {
 }
  
 h1 {
-  font-family: 'Fredericka the Great', cursive;
-  font-size: 64px;
-  color: #8b1b00;
+  font-family: Georgia, cursive;
+  font-size: 40px;
+  color: #a81a3e;
 }
  
 p, li {
   font-family: 'Lato', sans-serif;
   font-size: 22px;
-  color: #51473b;
+  color: #030200;
 }
 
 
